<resources>
    <string name="app_name">DiscussX</string>
    <string name="intro_app">GREAT APP FOR UNIVERSITY SUBJECTS DISCUSSION</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="facebook_app_id">630645550439486</string>
    <string name="fb_login_protocol_scheme">fb630645550439486</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_register">Register</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_password">PASSWORD</string>
    <string name="hint_confirm_pass">CONFIRM PASSWORD</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">I don\'t have an account yet.</string>
    <string name="btn_link_to_login">I have already registered.</string>

    //set up personal profile
    <string name="title_setup_personalprofile">Set Up Your Personal Profile</string>
    <string name="whatsyourfullname">What is your full name?</string>
    <string name="hint_fullname">Full Name</string>
    <string name="whatsyourgender">What is your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="whatsyourbday">What is your date of birth?</string>
    <string name="dob">Enter your birthday</string>
    <string name="whatsyouruni">Which university are you currently studying in?</string>
    <string name="whatsyouracaschool">Which academic school are you in?</string>
    <string name="whatsyourcourse">Which course are you currently studying?</string>
    <string name="start_discussing">Start Discussing!</string>
    <string name="short_desc1">Your profile is successfully set up. Start discussing about your university subjects by joining discussion groups or creating new discussion groups.</string>
    <string name="join_group">JOIN DISCUSSION GROUP</string>
    <string name="create_group">CREATE NEW DISCUSSION GROUP</string>

    <string name="join_group2">Join Discussion Group</string>
    <string name="create_group2">Create New Discussion Group</string>
    <string name="ask_group_name">GROUP NAME</string>
    <string name="create_group_btn">CREATE</string>
    <string name="post">Post</string>
    <string name="create_post_title">Create Post</string>
    <string name="create_post">POST</string>
    <string name="post_title">Title</string>
    <string name="post_desc">Description</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="first_user_profile_edit_text">Set Up Your Profile</string>
    <string name="first_user_profile_fullname">Full Name</string>
    <string name="select_campus">Campus</string>
    <string name="select_academic_level">Academic Level</string>
    <string name="select_academic_school">Academic School</string>
    <string name="select_course">Course</string>
    <string name="select_intake_month">Intake Month</string>
    <string name="select_intake_year">Intake Year</string>
    <string name="checkbox_currentCourse">Tick me if you\'re studying this course right now</string>
    <string name="add_more_course">Add More Course(s)</string>
    <string name="next_page">Next</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string-array name="university_name">
        <item>Sunway University</item>
        <item>Sunway College</item>
    </string-array>
    <string-array name="academic_level">
        <item>Pre-U</item>
        <item>Diploma</item>
        <item>Bachelor Degree</item>
        <item>Masters</item>
        <item>PhD</item>
    </string-array>

    <string-array name="pre_u_courses">
        <item>Foundation in Science</item>
        <item>Foundation in Arts</item>
        <item>A-Level</item>
        <item>Canadian Matriculation</item>
        <item>Australian Matriculation</item>
        <item>Monash University Foundation Year</item>
    </string-array>
    <string-array name="academic_school">
        <item>Science And Technology</item>
        <item>Business School</item>
        <item>Mathematical Sciences</item>
        <item>Hospitality</item>
        <item>Arts</item>
        <item>American Degree Transfer Program</item>
        <item>Centre for English Language Studies</item>
    </string-array>
    <string-array name="sst_degree_courses">
        <item>Computer Science</item>
        <item>Information Systems</item>
        <item>Information Systems (Business Analytics)</item>
        <item>Information Technology</item>
        <item>Information Technology (Computer Network And Security)</item>
        <item>Mobile Computing With Entrepreneurship</item>
        <item>Software Engineering</item>
        <item>Biology with Psychology</item>
        <item>Medical Biotechnology</item>
        <item>Psychology</item>
    </string-array>
    <string-array name="intake_year">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
    </string-array>
    <string-array name="intake_month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

